--- a/sample_app/test/fixtures/users.yml
+++ b/sample_app/test/fixtures/users.yml
@@ -13,6 +13,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 connor:
-  name: Connor Ottenbacher
+  name: Connor Example
   email: connor@example.com
+  password_digest: <%= User.digest('password') %>
+
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
   password_digest: <%= User.digest('password') %>
